# smart_cart_I4

./: README.md
Smart_cart/: 2주차  readme.md
Smart_cart/1주차/: readme.md
Smart_cart/1주차/chart_sh/: readme.md
Smart_cart/2주차/: readme.md  프로젝트_PPT_아이포_2.pptx
Smart_cart/3주차/: battery.py  obstacle_avoidance.py  obstacle_avoidance_node.py  readme.md  sound_I4.py.py
Smart_cart/3주차/chartgod_file/: obstacle_avoidance (1).py  readme.md  xy_coordinate.py
Smart_cart/3주차/chartgod_png/: readme.md
Smart_cart/4주차/: my_dict.dict  ppt I4_4 (1).pptx  readme.md  sound_test.py  test.py  test_4.py
Smart_cart/4주차/chart_sh/: ppt I4_4.pptx  readme.md
Smart_cart/4주차/pocketsphinx/: getoutput.py  kobuki_mic.py  readme.md  test_4.py
Smart_cart/4주차/pocketsphinx/FFT_filter/: kobuki_mic_noi3.py  readme.md
Smart_cart/5주차/: kobuki_mic_noi_led_obstacle_avoidance_final_final_act (1).py  readme.md  yolov5_opencv_pid.py  아이포_이승헌_5주차.pptx
Smart_cart/5주차/chartgod_5/: kobuki_mic_noi_led_obstacle_avoidance_final_final (1).py  readme.md  아이포_이승헌_5주차.pptx
Smart_cart/6주차/: readme.md
Smart_cart/6주차/chart_6/: kobuki_mic_finish_0412_no_yes_21.py  kobuki_mic_finish_0412_yes2.py  kobuki_mic_last_chat_finall_last.py  readme.md  yolov5_opencv_person_4s_finalll.py
Smart_cart/7주차/: readme.md
Smart_cart/7주차/chart_sh/: battery (1).py  battery.cpp  kobuki_mic_0412_0319.py  kobuki_mic_0412_seungheon (1).py  kobuki_mic_0412_seungheon.py  kobuki_mic_finish_0412_no (1).py  kobuki_mic_finish_0412_no (2).py  kobuki_mic_finish_0413_no_yes_21_2 (사본).py  kobuki_mic_last_chat_finall_last_0412.py  ppt_images  readme.md  tracker_on_master.cpp  tracker_on_master.py  yolov3_tiny_0413.py  yolov5_opencv_person_4s_play.py  yolov5_opencv_person_4s_play_lidar.py
Smart_cart/8주차/: readme.md
Smart_cart/8주차/chart_sh/: readme.md
Smart_cart5/: 5주차
Smart_cart_3/: 3주차
Smart_cart_4/: 4주차
Smartcart_App/: local.properties  readme.md
Smartcart_Deep_learning/: image  readme.md
Smartcart_Deep_learning/chart_sh/: children.cpp  readme.md
Smartcart_Deep_learning/image/: readme.md
Smartcart_Deep_learning/image/children_study/: readme.md
Smartcart_Final_I4/: readme.md
Smartcart_OpenCV/: 1007.py  OpenCV-Tracker.py  TechVidvan-Pose-estimatior.py  track_trackingAPI.py
Smartcart_ROS/: git_clone.txt  obstacle_avoidance.py  readme.md
Smartcart_ROS/HC_SR04_Sensor/: HC_SR04_Sensor.ino
Smartcart_ROS/HM10_rssi_1/: HM10_rssi_1.ino
Smartcart_ROS/HM10_rssi_test0329/: HM10_rssi_test0329.ino
Smartcart_ROS/chartgod_ROS/: readme.md
Smartcart_ROS/chartgod_ROS/battery_ros/: readme.md
Smartcart_ROS/chartgod_ROS/image/: readme.md
Smartcart_ROS/chartgod_ROS/pocket_ros/: kobuki_mic(이전).py  kobuki_mic.py  kobuki_mic_finish_0412_no.py  kobuki_mic_finish_0412_no_yes.py  kobuki_mic_finish_0413_no_yes_21_2.py  kobuki_mic_last_chat.py  kobuki_mic_last_chat_change.py  kobuki_mic_last_chat_finall.py  kobuki_mic_noi.py  kobuki_mic_noi4.py  kobuki_mic_noi_led.py  readme.md  seungheon_master_test.py  sphinx_lidar_avoidance (1).py  yolov5_opencv_pid_lidar_final.py
Smartcart_ROS/chartgod_ROS/speaker_ros/: readme.md  test_gtts.py  tty.py
Smartcart_ROS/chartgod_ROS/tracker_ros/: readme.md  yolov5_opencv_0412_lidar_finall.py  yolov5_opencv_person_4s_0411.py  yolov5_opencv_person_4s_finalll_pix.py  yolov5_opencv_person_5s.py  yolov5_opencv_person_5s_lidar.py  yolov5_opencv_person_change.py  yolov5_opencv_person_won.py  yolov5_opencv_pid_1 (1).py  yolov5_opencv_pid_1 (2).py
Smartcart_ROS/gl_driver_libraries/: README.md  gl_driver.cpp  gl_driver.h
Smartcart_ROS/gl_driver_libraries/udp/: udp.cpp  udp.h
Smartcart_ROS/gl_ros_driver/: README.md
Smartcart_ROS/gl_ros_driver/launch/: gl_ros_driver.launch
Smartcart_ROS/kcf_tracker_ros/: CMakeLists.txt  tracking_utility.cpp
Smartcart_ROS/kcf_tracker_ros/KCFcpp/: CMakeCache.txt  CMakeLists.txt  KCF  Makefile  cmake_install.cmake
Smartcart_ROS/kobuki_pose_topic/: README.md  package.xml
Smartcart_ROS/kobuki_pose_topic/src/: topic_publisher.cpp  topic_publisher1.cpp  topic_publisher_move_base_simple.cpp  topic_subscriber.cpp
Smartcart_ROS/opencv/: CMakeLists.txt  package.xml
Smartcart_ROS/opencv/src/: pub.cpp
Smartcart_ROS/pocketsphinx/: kobuki_mic_noi2.py  my_dict.dict  readme.md  sound.py  sphinx_lidar_avoidance.py
Smartcart_ROS/pose_map_img/: CMakeLists.txt  package.xml
Smartcart_ROS/pose_map_img/src/: pub.cpp  sub.cpp
Smartcart_ROS/rosbook_kobuki/kobuki_navigation/: README.md
Smartcart_ROS/rosbook_kobuki/kobuki_slam/: README.md
Smartcart_ROS/test_kobuki_action/: CMakeLists.txt  README.md  package.xml
Smartcart_ROS/test_kobuki_action/msg/: KobukiMsg.msg
Smartcart_ROS/test_kobuki_action/src/: 0413test_action_client.cpp  0414test_action_client.cpp  0414test_action_server.cpp  0417_stop_test_action_client.cpp  0418_map_test_action_client.cpp  A_B_action_client.cpp  action_client.cpp  tutorial_action_client.cpp  tutorial_action_server.cpp
Smartcart_ROS/testbot_gazebo/: CMakeLists.txt  package.xml
Smartcart_ROS/testbot_gazebo/config/: gmapping_params.yaml
Smartcart_ROS/testbot_gazebo/launch/: kobuki.launch  kobuki_slam.launch  turtlebot3_gmapping.launch  turtlebot3_slam.launch
Smartcart_ROS/tracking/: CMakeLists.txt  package.xml
Smartcart_ROS/tracking/src/: cam_test.cpp  cam_test2.cpp  darknet_ros_tracking_test.cpp  tracking_test.cpp  예제.cpp
taeu910_ros/kobuki_pose_topic/: CMakeLists.txt
taeu910_ros/kobuki_pose_topic/src/: topic_publisher.cpp  topic_subscriber.cpp
taeu910_ros/test_kobuki_action/: package.xml
taeu910_ros/test_kobuki_action/src/: action_server.cpp
taeu910_ros/testbot_gazebo/launch/: kobuki.launch
taeu910_ros/testbot_gazebo/worlds/: testbot.world
taeu_test/: 230405_LED.ino  base_position.txt  map.py  test_action_client.py  test_action_client_def.py  test_action_client_mapIMG_def.py  test_action_server.py  webcam_tracker.avi  yolov5_opencv_person_4s_finalll_sen.py  yolov5_trackingAPI.py  yolov5_trackingAPI_while.py
taeu_test/ros_opencv_test/: CMakeLists.txt  package.xml
taeu_test/ros_opencv_test/src/: ros_opencv_test.cpp
(+65 files in other folders)
